<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:maxWidth="650dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:padding="8dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/nameLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title2"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:id="@+id/firstNameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/firstNameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck, Autofill" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastNameLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLL">

        <TextView
            android:id="@+id/lastNameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/surnameTV"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lastNameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:hint="@string/enter_surname"
            android:inputType="text"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck, Autofill" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addressLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameLL">

        <TextView
            android:id="@+id/addressTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addressET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:hint="@string/enter_address"
            android:inputType="text"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck, Autofill" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phoneLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressLL">

        <TextView
            android:id="@+id/phoneTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phoneET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:autofillHints="phone"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck, Autofill" />
    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/add"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneLL" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:clipToPadding="false"
        android:padding="8dp"
        android:scrollbars="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn" />

</androidx.constraintlayout.widget.ConstraintLayout>